required changes for users to migrate from one version of MITAB to the
next.  Developers are strongly encouraged to document their changes and
their impacts on the users here.  (Please add the most recent changes to 
the top of the list.)

For a complete change history, please see the CVS log comments.


CHANGES - Current Version:
--------------------------

- Fixed error reading compressed text objects introduced in v1.6.0 (bug 1722)

- Fixed memory leak when writing .TAB with new (optimized) spatial index
  introduced in v1.6.0 (bug 1725)

- Fixed memory leaks when reading multipoint objects from .MIF files

- Fixed another issue related to attempting to read past EOF while writing
  collections (bug 1657)

- Fixed a problem writing collections where collection objects were trashed
  during object block splitting (bug 1728)


Version 1.6.1 (2007-03-30)
--------------------------

- Added "Quick Spatial Index Mode" which generates a non-optimal spatial
  index (similar to MITAB 1.5 and older) but results in faster write
  time than the optimized index generated by v1.6.0+ (bug 1669)
  (Thanks to Safe Software for funding this.)

- Added mitab_c_set_quick_spatial_index_mode() to C API (bug 1669)

- Fixed problem writing collections where MITAB was sometimes trying to 
  read past EOF in write mode (bug 1657).

- Fixed another problem writing collections when the header of objects 
  part of a collection were split on multiple blocks (bug 1663)

- Added missing NULL pointer checks in SetPenFromStyleString(), 
  SetBrushFromStyleString() and SetSymbolFromStyleString() (bug 1670)


Version 1.6.0 (2007-02-15)
--------------------------

- Improved generation of the .map's internal spatial index and object
  data blocks to produce an optimal r-tree, resulting in performance 
  improvements of up to 30 times faster on some spatial searches, 
  matching the perfomance of files generated by MapInfo. (bug 1585)